# espn-ff-newsletter-bot

./: .gitignore  LICENSE  README  README.md  boxscore_data.json  espn_scores_fetcher.py  myconstants.py  pyproject.toml  requirements.txt  team_records.json  yearly_boxscores.json
src/: chatgpt_client.py  chatgpt_input_TEMPLATE.py  config-TEMPLATE.py  data_extractor.py  email_client.py  espn_api_client.py  espn_league_input.py  espn_scores_fetcher.py  file_exporter.py  json_exporter.py  leagueInfoVariable.json  leagueInformationTemplate.py  mNav.json  mTopPerformers.json  main.py  myconstants.py  requirements.txt  yearly_boxscores.json  zapier_email_client.py
src/json files/: boxscore_data.json  boxscore_weekly_summary.json  fantasy_recap.json  league_info.json  matchup_score_data.json  scoreboard_data.json  settings_data.json  status_data.json  team_data.json  team_data_summary.json  top_performers_data.json
src/temp files/: boxscore_weekly_summary.json  consolidated_weekly_summary.json  mBoxscore_API_response.json  mMatchupScore_API_response.json  mNav_API_response.json  mProjectedPlayoffMatchups_API_response.json  mSettings_API_response.json  mStandings_API_response.json  mTeam_API_response.json  newsletter_text.txt  team_data_summary.json
